--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     </div>
 
     <div class="partner">
-        <img> 
+        <img src="/assets/image/Logos/Walmart.svg"> 
+        <img src="/assets/image/Logos/JP Morgan.svg">
+        <img src="/assets/image/Logos/Visa.svg">
+        <img src="/assets/image/Logos/Tinder.svg">
+        <img src="/assets/image/Logos/Samsung.svg">
+        <img src="/assets/image/Logos/Verizon.svg">
     </div>
     
 
