--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         <img src="/assets/image/Logos/Samsung.svg">
         <img src="/assets/image/Logos/Verizon.svg">
     </div>
+
+    <div class="section-2">
+        <img src="/assets/image/">
+        <h3>Spense.com</h3>
+        <p>
+            Rethink the way writeers get paid, an open source platform 
+            designed to help writers focus more on writing, and less on 
+            when and how they will get paid. Project in collaboration with Codewell.cc
+        </p>
+    </div>
     
 
 </body>
