--- a/index.html
+++ b/index.html
@@ -56,13 +56,26 @@
     </div>
 
     <div class="section-2">
-        <img src="/assets/image/">
-        <h3>Spense.com</h3>
-        <p>
-            Rethink the way writeers get paid, an open source platform 
-            designed to help writers focus more on writing, and less on 
-            when and how they will get paid. Project in collaboration with Codewell.cc
-        </p>
+        <div style="padding-right: 100px;">
+            <img src="/assets/image/">
+            <h3>Spense.com</h3>
+            <p>
+                Rethink the way writeers get paid, an open source platform 
+                designed to help writers focus more on writing, and less on 
+                <span style="font-style: italic;">when</span> and
+                <span style="font-style: italic;">how</span> they will get paid. Project in collaboration with Codewell.cc
+            </p>
+        </div>
+
+        <div>
+            <img src="/assets/image/">
+            <h3>YelpCamp.com</h3>
+            <p>
+                Allowing backpack travelers to perfectly paln their trip through an open-source
+                platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
+                favorite in 2021.
+            </p>
+        </div>
     </div>
     
 
