--- a/index.html
+++ b/index.html
@@ -58,18 +58,19 @@
     <div class="section-2">
         <div style="padding-right: 100px;">
             <img src="/assets/image/">
-            <h3>Spense.com</h3>
+            <h3>Spense.com &#8594;</h3>
             <p>
                 Rethink the way writeers get paid, an open source platform 
                 designed to help writers focus more on writing, and less on 
                 <span style="font-style: italic;">when</span> and
-                <span style="font-style: italic;">how</span> they will get paid. Project in collaboration with Codewell.cc
+                <span style="font-style: italic;">how</span> they will get paid. 
+                Project in collaboration with Codewell.cc
             </p>
         </div>
 
         <div>
             <img src="/assets/image/">
-            <h3>YelpCamp.com</h3>
+            <h3>YelpCamp.com &#8594;</h3>
             <p>
                 Allowing backpack travelers to perfectly paln their trip through an open-source
                 platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
@@ -78,5 +79,30 @@
         </div>
     </div>
     
+
+    <div class="section-3">
+        <div style="padding-right: 100px;">
+            <h3>A co-founder at one of the world's largest communities</h3>
+            <p>
+                The conbimed experince i have working at the top Furtune 500 
+                companies has allowed me to developer skillset that allows me 
+                in not just development, but in any aspect of any business.
+            </p>
+            <p>
+                I'm proud to announce that i am now working at one of the world's 
+                largest communities teaching young minds about how to sell your self 
+                as a developer and open them to a whole new world of opportunies.
+            </p>
+        </div>
+
+        <div>
+            <h3>YelpCamp.com &#8594;</h3>
+            <p>
+                Allowing backpack travelers to perfectly paln their trip through an open-source
+                platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
+                favorite in 2021.
+            </p>
+        </div>
+    </div>
 
 </body>
