--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         </p>
     </div>
 
+    <div class="partner1">
     <div class="partner">
         <img src="/assets/image/Logos/Walmart.svg"> 
         <img src="/assets/image/Logos/JP Morgan.svg">
@@ -54,6 +55,7 @@
         <img src="/assets/image/Logos/Samsung.svg">
         <img src="/assets/image/Logos/Verizon.svg">
     </div>
+</div>
 
     <div class="section-2">
         <div style="padding-right: 100px;">
@@ -81,9 +83,9 @@
     
 
     <div class="section-3">
-        <div style="padding-right: 100px;">
+        <div class="sec3l">
             <h3>A co-founder at one of the world's largest communities</h3>
-            <p>
+            <p style="margin: -50px;">
                 The conbimed experince i have working at the top Furtune 500 
                 companies has allowed me to developer skillset that allows me 
                 in not just development, but in any aspect of any business.
@@ -96,11 +98,22 @@
         </div>
 
         <div>
-            <h3>YelpCamp.com &#8594;</h3>
             <p>
-                Allowing backpack travelers to perfectly paln their trip through an open-source
-                platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
-                favorite in 2021.
+                As a developer, you have everything availiable to you and all that is holding 
+                you back is yourself
+            </p>
+            <p>
+                A quote i live by perfectly illustrates what i mean
+            </p>
+            <p>
+                "How big would you dream, if you <span style="font-style: bold;">knew</span>
+                you couldn't fail?"<br>
+                You've always gone through the hardest parts being a developer, it's time to 
+                elevate your skills and become a leader in something you're 
+                <span style="font-style: italic;">passionate</span> about.  
+            </p>
+            <p>
+                I'm happy to chat over coffee some time about how i can help you company.
             </p>
         </div>
     </div>
