--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/sections.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/font/Alga">
 </head>
 
@@ -85,7 +86,7 @@
     <div class="section-3">
         <div class="sec3l">
             <h3>A co-founder at one of the world's largest communities</h3>
-            <p style="margin: -50px;">
+            <p style="margin-top: -50px;">
                 The conbimed experince i have working at the top Furtune 500 
                 companies has allowed me to developer skillset that allows me 
                 in not just development, but in any aspect of any business.
@@ -118,4 +119,33 @@
         </div>
     </div>
 
+    <div>
+        <div>
+            <h3>
+                interested in working with me?
+            </h3>
+        </div>
+        <div>
+            <p>
+                I'm active on all social media platforms listed below, but you can also me 
+                an email and i will get back to you within 24-48 hours.
+            </p>
+        </div>
+        <div>
+            <button>
+                Get In Touch
+            </button>
+        </div>
+    </div>    
+
+    <footer>
+        <div class="logo">
+            Jonathan Specter
+        </div>
+        <div>
+            <img src="./assets/image/Social Icons/Twitter.svg">
+            <img src="./assets/image/Social Icons/LinkedIn.svg">
+            <img src="./assets/image/Social Icons/Github.svg">
+        </div>
+    </footer>
 </body>
