--- a/index.html
+++ b/index.html
@@ -87,18 +87,18 @@
         <div class="sec3l">
             <h3>A co-founder at one of the world's largest communities</h3>
             <p style="margin-top: -50px;">
-                The conbimed experince i have working at the top Furtune 500 
-                companies has allowed me to developer skillset that allows me 
-                in not just development, but in any aspect of any business.
+                The conbimed experince i have working at the top Furtune<br>500 
+                companies has allowed me to developer skillset that<br>allows me 
+                in not just development, but in any aspect of any<br>business.
             </p>
             <p>
-                I'm proud to announce that i am now working at one of the world's 
-                largest communities teaching young minds about how to sell your self 
-                as a developer and open them to a whole new world of opportunies.
+                I'm proud to announce that i am now working at one of the<br>world's 
+                largest communities teaching young minds about how<br>to sell your self 
+                as a developer and open them to a whole new<br>world of opportunies.
             </p>
         </div>
 
-        <div>
+        <div class="sec3r">
             <p>
                 As a developer, you have everything availiable to you and all that is holding 
                 you back is yourself
@@ -119,16 +119,16 @@
         </div>
     </div>
 
-    <div>
+    <div class="section-4">
         <div>
             <h3>
-                interested in working with me?
+                Interested in working with me?
             </h3>
         </div>
         <div>
             <p>
-                I'm active on all social media platforms listed below, but you can also me 
-                an email and i will get back to you within 24-48 hours.
+                I'm active on all social media platforms listed below, but you<br>can also me 
+                an email and i will get back to you within 24-48<br>hours.
             </p>
         </div>
         <div>
