--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
     <div class="section-1">
         <h2>
-            Helping companies build better, scalable software.
+            Helping companies build<br>better, scalable software.
         </h2>
         <p>
             Award-winning web developer and author, 
-            with over 15+ years of working experince with 
-            Fortune 500 campanies like Apple, Google, Facebook, and more
+            with over 15+ years of working<br>experince with 
+            Fortune 500 campanies like Apple, Google, Facebook, and<br>more.
         </p>
     </div>
 
@@ -59,12 +59,12 @@
 </div>
 
     <div class="section-2">
-        <div style="padding-right: 100px;">
+        <div>
             <img src="/assets/image/">
             <h3>Spense.com &#8594;</h3>
             <p>
-                Rethink the way writeers get paid, an open source platform 
-                designed to help writers focus more on writing, and less on 
+                Rethink the way writeers get paid, an open source platform<br>
+                designed to help writers focus more on writing, and less on<br>
                 <span style="font-style: italic;">when</span> and
                 <span style="font-style: italic;">how</span> they will get paid. 
                 Project in collaboration with Codewell.cc
@@ -77,7 +77,7 @@
             <p>
                 Allowing backpack travelers to perfectly paln their trip through an open-source
                 platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
-                favorite in 2021.
+                favorite in<br>2021.
             </p>
         </div>
     </div>
@@ -86,7 +86,7 @@
     <div class="section-3">
         <div class="sec3l">
             <h3>A co-founder at one of the world's largest communities</h3>
-            <p style="margin-top: -50px;">
+            <p style="margin-top: -30px;">
                 The conbimed experince i have working at the top Furtune<br>500 
                 companies has allowed me to developer skillset that<br>allows me 
                 in not just development, but in any aspect of any<br>business.
@@ -142,7 +142,7 @@
         <div class="logo">
             Jonathan Specter
         </div>
-        <div>
+        <div class="socials">
             <img src="./assets/image/Social Icons/Twitter.svg">
             <img src="./assets/image/Social Icons/LinkedIn.svg">
             <img src="./assets/image/Social Icons/Github.svg">
