--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div>
-            <button>Get in Touch</button>
+            <button>Get in touch</button>
         </div>
 
     
@@ -60,7 +60,7 @@
 
     <div class="section-2">
         <div>
-            <img src="/assets/image/">
+            <img class="pic" src="/assets/image/Spense.png">
             <h3>Spense.com &#8594;</h3>
             <p>
                 Rethink the way writeers get paid, an open source platform<br>
@@ -72,11 +72,11 @@
         </div>
 
         <div>
-            <img src="/assets/image/">
+            <img class="pic" src="/assets/image/YelpCamp.png">
             <h3>YelpCamp.com &#8594;</h3>
             <p>
-                Allowing backpack travelers to perfectly paln their trip through an open-source
-                platform similar to Trip-Advisor. With over 1m MAU, Yelpcamp has been the crowd
+                Allowing backpack travelers to perfectly paln their trip<br>through an open-source
+                platform similar to Trip-Advisor. With<br>over 1m MAU, Yelpcamp has been the crowd
                 favorite in<br>2021.
             </p>
         </div>
@@ -133,7 +133,7 @@
         </div>
         <div>
             <button>
-                Get In Touch
+                Get in touch
             </button>
         </div>
     </div>    
